Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3210

atscppapi intercept: saved event replay causes crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • CPP API
    • None

    Description

      Intercept saves an event when it can't get a lock to replay later. Before that replay happens, if there is another event that causes the plugin to change the intercept state, replay of the saved event causes a crash.

      Attachments

        Activity

          People

            manjeshnilange Manjesh Nilange
            manjeshnilange Manjesh Nilange
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: