TS-3210 fix for 'atscppapi intercept: saved event replay causes crash'